guild members - correct z-index of search field

--- a/js/web/guildmemberstat/css/guildmemberstat.css
+++ b/js/web/guildmemberstat/css/guildmemberstat.css
@@ -417,7 +417,7 @@
     padding: 3px 5px;
     background-color: var(--text-btn);
     position: relative;
-    z-index: 100;
+    z-index: 1;
 }
 
 #GuildMemberStat #gms-filter-input.highlight {
